<resources>
    <string name="app_name">NativeUtils</string>
    <string name="default_no_sonic">Load Without Sonic</string>
    <string name="sonic">Load With Sonic</string>
    <string name="sonic_preload">DO Sonic Preload</string>
    <string name="sonic_offline">Load Sonic With Offline Cache</string>
    <string name="sonic_no_eTag">Load Sonic With No ETag</string>
    <string name="reset_clear">Clean Up Cache</string>
    <string name="tencent_vas_team">腾讯增值技术团队出品</string>
    <string name="set_custom_url">设置自定义URL</string>
    <string name="close">关闭</string>
    <string name="http_prefix">http://</string>
    <string name="finish">完成</string>
    <string name="illegal_url">不合法的URL</string>
    <string name="edit">编辑</string>
    <string name="edit1">编辑</string>
</resources>
