<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    >
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:id="@+id/iv_test"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <View
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            />
    <TextView
        android:id="@+id/button1"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Hello World!"
         />
        <TextView
            android:id="@+id/button2"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Hello World!"
            />
        <Button
            android:id="@+id/test_edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <Button
            android:id="@+id/test_edit1"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="test_edit1"
            />

        <Button
            android:onClick="preload_click"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="预加载"
            />

        <LinearLayout
            android:id="@+id/content"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_default_mode"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="@string/default_no_sonic" />

            <Button
                android:id="@+id/btn_sonic"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="@string/sonic" />

            <Button
                android:id="@+id/btn_sonic_preload"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="@string/sonic_preload"
                />

            <Button
                android:id="@+id/btn_sonic_with_offline"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="@string/sonic_offline"
                />

            <Button
                android:id="@+id/btn_reset"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="@string/reset_clear"
                />

            <Button
                android:id="@+id/btn_litho"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="Litho activity"
                />
            <Button
                android:id="@+id/btn_test_rx"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="Litho activity"
                />

            <Button
                android:id="@+id/btn_test_rx_test"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="RX测试"
                />

            <Button
                android:id="@+id/btn_go_service_activity"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="go service Activity"
                />

            <Button
                android:id="@+id/btn_start_service"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="开启service"
                />

            <Button
                android:id="@+id/btn_bind_service"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="绑定service"
                />
            <Button
                android:id="@+id/btn_unbind_service"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="解绑service"
                />

            <Button
                android:id="@+id/btn_stop_service"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="停止service"
                />

            <Button
                android:id="@+id/to_lottie"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="to_lottie"
                />
            <Button
                android:id="@+id/to_gif"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="to_gif"
                />

            <Button
                android:id="@+id/app_btn_skip_other_app"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="跳转app"
                />

            <Button
                android:id="@+id/app_btn_calendar_write"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="写日历"
                />
            <Button
                android:id="@+id/app_btn_databinding_activity"
                style="@style/SonicButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="DataBinding_Activity"
                />
        </LinearLayout>

        <com.dongbingbin.widget.zan.LikeAnimationView
            android:id="@+id/test_like"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <com.dongbingbin.widget.TestTouchLayout
            android:id="@+id/test_ttl1"
            android:layout_width="match_parent"
            android:background="@color/background_debug"
            android:layout_height="100dp">

            <com.dongbingbin.widget.TestTouchLayout
                android:id="@+id/test_ttl2"
                android:layout_gravity="center"
                android:background="@color/background_error"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </com.dongbingbin.widget.TestTouchLayout>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">
            


            <androidx.constraintlayout.helper.widget.Flow
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="k1,k2,k3,k4,k5"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="aligned"
                />
            <Button
                android:id="@+id/k1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k1"
                />
            <Button
                android:id="@+id/k2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k2"
                />
            <Button
                android:id="@+id/k3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k3"
                />
            <Button
                android:id="@+id/k4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k4"
                />
            <Button
                android:id="@+id/k5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k5"
                />

            <Button
                android:id="@+id/k6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="k6"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="k11,k22"
                app:layout_constraintTop_toTopOf="@id/k33"
                />
            <Button
                android:id="@+id/k11"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="111"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.1"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/k22"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="222"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintTop_toBottomOf="@+id/k11"
                android:layout_marginTop="130dp"

                />

            <Button
                android:id="@+id/k33"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="333"
                android:layout_height="wrap_content"
                android:layout_width="0dp"

                app:layout_constraintTop_toBottomOf="@+id/b11"

                app:layout_constraintWidth_percent="0.5"
                />

            <Button
                android:id="@+id/k44"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="444"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:layout_constraintCircle="@id/k33"
                app:layout_constraintCircleRadius="200dp"
                app:layout_constraintCircleAngle="180"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    
</LinearLayout>